--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         pre.ayo {
             width: 650px;
             padding: 10px;
-            margin-right: 200px;
+            //margin-right: 100px;
             margin-left: 10px;
             bottom: 525px;
             float: right;
@@ -64,7 +64,7 @@
             position: relative;
             float: right;
             align: left;
-            margin-right: 200px;
+            //margin-right: 100px;
             margin-left: 10px;
             margin-bottom:10px;
         }
@@ -94,12 +94,12 @@
 
         div.divifm {
             margin-top: 20px;
-            margin-left: 100px;
+            //margin-left: 100px;
         }
 
         div.oi{
-            margin-right: 20px;
-            margin-left: 20px;
+            margin-right: 5%;
+            margin-left: 5%;
         }
     </style>
 
