--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
             background-color: #f4f4f4;
             margin: 20% auto;
             margin-top: 5%;
-            padding: 20%;
-            width: 70%;
-            height: 75%;
+            padding: 5%;
+            width: 40%;
+            height: 55% s%;
             box-shadow: 0 5px 8px 0 rgba(0,0,0,0.2),0 7px 20px 0 rgba(0,0,0,0.17);
         }
 
@@ -101,6 +101,24 @@
             margin-right: 5%;
             margin-left: 5%;
         }
+
+        input {
+            display: block;
+            padding: .5%;
+            width: 100%;
+            margin: 1%;
+        }
+
+        .btn-primary{
+            margin: 12%;
+            width: 25%;
+        }
+
+        .btn{
+            background: linear-gradient(to bottom, #337ab7 0, #265a88 100%) repeat-x;
+            border-color: #245580;
+            color: #f4f4f4;
+        }
     </style>
 
 </head>
@@ -110,7 +128,7 @@
     <li><a>Scheduler</a></li>
     <li><a id="authorize_button">Login</a></li>
     <li><a href="/" id="signout_button">Logout</a></li>
-    <li class="r"><button id="modalBtn" class="btn btn-primary">Create Event</button></li>
+    <li class="r"><button id="modalBtn" class="btn">Create Event</button></li>
 </ul>
 <div id="haha" class="oi">
 
