--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             float: right;
             position: relative;
             font-size: 18pt;
+            margin-top: 3%;
 
         }
 
