--- a/index.html
+++ b/index.html
@@ -52,17 +52,18 @@
         pre.ayo {
             width: 650px;
             padding: 10px;
-            //margin-right: 100px;
+            margin-right: 50px;
             margin-left: 10px;
             bottom: 525px;
             float: right;
             position: relative;
             font-size: 18pt;
+            font-family: sans-serif;
 
         }
 
         h1.pls {
-            width: 650px;
+            width: 700px;
             position: relative;
             float: right;
             align: left;
@@ -100,7 +101,7 @@
         }
 
         div.oi{
-            margin-right: 5%;
+            margin-right: 7%;
             margin-left: 5%;
         }
 
@@ -134,7 +135,7 @@
 </ul>
 <div id="haha" class="oi">
 
-<h1 class="pls">Today's Activities <span id="datetime"></span></h1>
+<h1 class="pls">Upcoming Activities <span id="datetime"></span></h1>
     <script>
         var dt = new Date();
         document.getElementById("datetime").innerHTML = dt.toLocaleString();
